Comment, font-awesome, and masquerading...
Updated the comment model to support nested comments.
Added the font-awesome library for general use.
Added ability for an admin to switch to another user, masquerading.

--- a/app/assets/stylesheets/dm_core/application.css
+++ b/app/assets/stylesheets/dm_core/application.css
@@ -9,6 +9,12 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree .
+ *= require dm_core/font-awesome
  */
 
+/*--- might be deinfed elsewhere, but make sure.  Does not support IE7 */
+.clearfix:after {
+  content: " ";
+  display: table;
+  clear: both;
+}
