--- a/forum/app/views/dm_forum/forum_topics/_form.html.erb
+++ b/forum/app/views/dm_forum/forum_topics/_form.html.erb
@@ -9,9 +9,9 @@
 
 <% if can? :moderate, @forum %>
   <div class="clearfix">
-    <%= form.input :sticky, :label => I18n.t('txt.sticky', :default => 'Sticky') %>
+    <%= form.input :sticky, :label => "<i class='icon-pushpin'></i> #{I18n.t('txt.sticky', :default => 'Sticky')}" %>
   </div>
   <div class="clearfix">
-    <%= form.input :locked, :label => I18n.t('txt.locked', :default => 'Locked') %>
+    <%= form.input :locked, :label => "<i class='icon-lock'></i> #{I18n.t('txt.locked', :default => 'Locked')}" %>
   </div>
 <% end %>
