--- a/forum/app/views/dm_forum/forums/list.html.erb
+++ b/forum/app/views/dm_forum/forums/list.html.erb
@@ -1,15 +1,7 @@
 <ul class="forum_list">
   <% @forums.each do |forum| %>
     <li>
-      <header>
-        <h1><%= link_to forum.name, forum_show_path(forum) %></h1>
-        <p class="forum_info">
-          <%= I18n.t 'fms.count_topics', :count => forum.forum_topics.size, :num => number_with_delimiter(forum.forum_topics.size) %>
-          &nbsp;&nbsp;/&nbsp;&nbsp;
-          <%= I18n.t 'fms.count_comments', :count => forum.comments_count, :num => number_with_delimiter(forum.comments_count) %>
-          <span class="forum_read"><%= link_to "Read Forum", forum_show_path(forum) %></span>
-        </p>
-      </header>
+      <%= render(:partial => 'forum_header', :object => forum, :as => :forum) %>
 
       <p class="forum_description"><%= forum.description %></p>
     </li>
