--- a/forum/app/views/dm_forum/admin/forums/index.html.erb
+++ b/forum/app/views/dm_forum/admin/forums/index.html.erb
@@ -7,6 +7,7 @@
   		  <tr>
   		    <th class="sort_handle"></th>
   		    <th>Name</th>
+  		    <th width="50">Type</th>
   		    <th width="50">Status</th>
   		  </tr>
   		</thead>
@@ -21,6 +22,7 @@
     	            <%= forum.description %>
     	          </div>
     	        </td>
+              <td><%= forum_presenter.type_of_forum %></td>
               <td><%= forum_presenter.label_published %></td>
     			  </tr>
     			<% end %>
