--- a/forum/app/views/dm_forum/forum_comments/edit.html.erb
+++ b/forum/app/views/dm_forum/forum_comments/edit.html.erb
@@ -1,3 +1,20 @@
+<%= render(:partial => 'dm_forum/forums/forum_header', :object => @forum_topic.forum, :as => :forum) %>
+
+<h1 id="topic_title">
+  <%= @forum_topic.title %>
+  <% if @forum_topic.locked? %>
+    <span>(<%= I18n.t 'txt.topic', :default => 'Topic' %> <%= I18n.t 'txt.locked', :default => 'locked' %>)</span>
+  <% end %>
+  <% if user_signed_in? %>
+    <% if can? :edit, @forum_topic %>
+      <span id="topic_mod">
+        <%= link_to(I18n.t('txt.edit', :default => 'edit'), edit_forum_forum_topic_path(@forum, @forum_topic), :class => "utility") %> |
+        <%= link_to(I18n.t('txt.delete', :default => 'delete'), forum_forum_topic_path(@forum, @forum_topic), :class => "utility", :method => :delete, :confirm => I18n.t('txt.views_topics.delete_sure', :default => 'Delete this topic forever?')) %>
+      </span>
+    <% end %>
+  <% end %>
+</h1>
+
 <h1><%= I18n.t 'txt.views_posts.edit', :default => 'Edit Post' %></h1>
 
 <h2><%= link_to @forum_comment.forum_topic.title, forum_forum_topic_path(@forum_comment.forum_topic.forum, @forum_comment.forum_topic) %></h2>
@@ -8,7 +25,7 @@
 <%= simple_form_for [@forum, @forum_topic, @forum_comment] do |f| %>
   <%#= f.error_messages %>
   <p id="post_body"><%= f.input :body, :as => :text %></p>
-  <p><%= submit_tag I18n.t('txt.views_posts.save', :default => 'Save post') %>
+  <p><%= submit_tag I18n.t('txt.views_posts.save', :default => 'Save post', :class => 'button') %>
   <%= I18n.t 'txt.or', :default => 'or' %> 
   <%= link_to I18n.t('txt.cancel', :default => 'cancel'), forum_forum_topic_path(@forum_comment.forum_topic.forum, @forum_comment.forum_topic, :page => page_number) %></p>
 <% end %>
