--- a/forum/app/views/dm_forum/forum_topics/_comment_item.html.erb
+++ b/forum/app/views/dm_forum/forum_topics/_comment_item.html.erb
@@ -1,15 +1,15 @@
 <li class="clearfix">
   <div class="user"><%= avatar_for comment_item.user, 48 %></div>
-  <p class="comment_author"><%= truncate(comment_item.user.display_name, :length => 15) %>
+  <p class="comment_author"><%= truncate(comment_item.user.display_name, :length => 30) %>
     <% if can?(:moderate, comment_item.forum_topic.forum) || !comment_item.user.active? %>
       <span class="admin">(<%= forum_comment_user_state(comment_item) %>)</span>
     <% end %>
   </p>
   <p class="info">
     <%= I18n.t 'fms.post_age', :when => time_ago_in_words(comment_item.created_at), :default => "posted %{when} ago" %>
-    | <%= edited = edited_on_tag(comment_item) %>
+    <%= edited = edited_on_tag(comment_item) %>
     <%= ' | ' if edited %>
-    <%= link_to 'Reply', '#reply' %>
+    <%= ' | '.html_safe + link_to('Reply', '#reply') unless @forum_topic.locked? || !user_signed_in? %>
     <% if user_signed_in? && can?(:edit, comment_item) %>
     | 
       <%= link_to I18n.t('txt.admin.edit_post', :default => 'Edit post'), edit_forum_forum_topic_forum_comment_path(@forum, @forum_topic, comment_item), :class => 'utility' %>
