--- a/forum/app/views/dm_forum/forums/_forum_header.html.erb
+++ b/forum/app/views/dm_forum/forums/_forum_header.html.erb
@@ -6,7 +6,9 @@
     &nbsp;&nbsp;/&nbsp;&nbsp;
     <%= I18n.t 'fms.count_comments', :count => forum.comments_count, 
           :num => number_with_delimiter(forum.comments_count) %>
-    <span class="new_topic" style="display:none"><%= link_to I18n.t('txt.new_topic', :default => 'New topic'), new_forum_forum_topic_path(forum) %></span>
-    <span class="read_forum" style="display:none"><%= link_to "Read Forum", forum_show_path(forum) %> | </span>
+		<% if can? :reply, forum %>
+			<span class="new_topic" style="display:none">&nbsp;&nbsp;&nbsp;<%= link_to I18n.t('txt.new_topic', :default => 'New topic'), new_forum_forum_topic_path(forum) %></span>
+		<% end %>
+    <span class="read_forum" style="display:none"><%= link_to "Read Forum", forum_show_path(forum) %></span>
   </p>
 </header>
