--- a/forum/app/views/dm_forum/admin/forum_categories/show.html.erb
+++ b/forum/app/views/dm_forum/admin/forum_categories/show.html.erb
@@ -1,5 +1,21 @@
+<%= render :partial => 'dm_forum/admin/forum_categories/index_sidebar' %>
 
-<% toolbar = nav_bar_items([ link_to(icon_label('icon-plus', 'New'), new_admin_forum_path, :title => 'New Forum', :class => "nav-btn-primary") ]) %>
+<div class="block">
+  <ul class="breadcrumb">
+      <li class="active"><%= @forum_category.name.to_s_default %></li>
+  </ul>
+
+  <% toolbar = render :partial => 'content_toolbar', :locals => { :item => @forum_category } %>
+  <%= content_box :title => "Forum Category", :toolbar => toolbar do %>
+    <dl>
+      <dt>Name</dt>
+      <dd><%= @forum_category.name.to_s_default %></dd>
+    </dl>
+  <% end %>
+
+</div>
+
+<% toolbar = nav_bar_items([ link_to(icon_label('icon-plus', 'New'), new_admin_forum_category_forum_path(@forum_category), :title => 'New Forum', :class => "nav-btn-primary") ]) %>
 <%= content_frame :title => 'Forums', :toolbar => toolbar do %>
   <div class="table-overflow">
     <table id="drag_sort" class="table table-striped table-bordered table-block" data-update_url="<%= dm_forum.admin_forum_sort_path %>">
@@ -12,7 +28,7 @@
         </tr>
       </thead>
       <tbody>
-        <% @forums.each do |forum| %>
+        <% @forum_category.forums.each do |forum| %>
           <% present forum do |forum_presenter| %>
             <tr class="item" data-item_id="<%= forum.id %>">
               <td class="sort_handle"></td>
