--- a/forum/app/views/dm_forum/admin/forums/_form.html.erb
+++ b/forum/app/views/dm_forum/admin/forums/_form.html.erb
@@ -1,4 +1,4 @@
-<% submit_url = (@forum.new_record? ? admin_forums_path : admin_forum_path) %>
+<% submit_url = (@forum.new_record? ? admin_forum_category_forums_path(@forum_category) : admin_forum_path) %>
 <%= simple_form_for(@forum, :url => submit_url) do |f| %>
   <%= f.error_notification :message => "<p>Please review the problems below</p>"%>
 	<%= content_box :title => @title do %>
@@ -8,7 +8,7 @@
     <%= f.input :is_public, :as => :toggle, :label => 'Make Forum Public?', :hint => 'This will allow anyone to see the forum.  Use option below to restrict to registered users' %>
     <%= f.input :requires_login, :as => :toggle, :label => 'Public Requires Login?', :hint => 'If this is a public forum, user must be logged in to see it.  (All private forums automatically require login)' %>
 
-    <%= submit_or_cancel :cancel_url => admin_forums_path %>
+    <%= submit_or_cancel :cancel_url => admin_forum_category_path(@forum_category) %>
 
 	<% end %>
 <% end %>
