added category list in sidebar

--- a/forum/app/views/dm_forum/forums/categories.html.erb
+++ b/forum/app/views/dm_forum/forums/categories.html.erb
@@ -1,3 +1,5 @@
+<%= render :partial => 'category_side_list' %>
+
 <ul class="forum_category_list">
   <% @forum_categories.each do |forum_category| %>
     <li>
