--- a/forum/app/views/dm_forum/forums/list.html.erb
+++ b/forum/app/views/dm_forum/forums/list.html.erb
@@ -1,7 +1,7 @@
 <ul class="forum_list">
   <% @forums.each do |forum| %>
     <li>
-      <%= render(:partial => 'forum_header', :object => forum, :as => :forum) %>
+      <%= render :partial => 'forum_header', :object => forum, :as => :forum %>
 
       <p class="forum_description"><%= forum.description %></p>
     </li>
