--- a/forum/app/views/dm_forum/forums/show.html.erb
+++ b/forum/app/views/dm_forum/forums/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for :sidebar do %>
 
   <% unless @forum.description.blank? %>
-    <div class="sidebar_forum_description>">
+    <div class="sidebar_forum_description">
       <%= @forum.description %>
     </div>
   <% end %>
@@ -21,6 +21,8 @@
   <% end %>
   
 <% end %>
+
+<%= render :partial => 'category_side_list' %>
 
 <% content_for :page_title, @forum.name %>
 
